--- a/index.html
+++ b/index.html
@@ -57,12 +57,12 @@
     <h1 class="title">2023 계획</h1>
     <p class="msg"> 올해는 모두 지키자 </p>
     <div class="row flex-row wrap">
-        <div class="bucket img1 center done">자격증 취득</div>
-        <div class="bucket img2 center done">일본여행</div>
-        <div class="bucket img1 center done">제2외국어 공부</div>
-        <div class="bucket img2 center done">이사하기</div>
-        <div class="bucket img1 center done">매일 공부하기</div>
-        <div class="bucket img2 center done">주 4회 운동하기</div>
+        <div class="bucket img1 center ">자격증 취득</div>
+        <div class="bucket img2 center ">일본여행</div>
+        <div class="bucket img1 center ">제2외국어 공부</div>
+        <div class="bucket img2 center ">이사하기</div>
+        <div class="bucket img1 center ">매일 공부하기</div>
+        <div class="bucket img2 center ">주 4회 운동하기</div>
     </div>
 </body>
 
